--- a/assemblies/pom.xml
+++ b/assemblies/pom.xml
@@ -3,14 +3,14 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.pentaho.reporting.plugin</groupId>
+    <groupId>org.tahopen.reporting.plugin</groupId>
     <artifactId>reporting-platform-plugin</artifactId>
-    <version>10.1.0.0-SNAPSHOT</version>
+    <version>0.1.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>reporting-platform-plugin-assemblies</artifactId>
-  <version>10.1.0.0-SNAPSHOT</version>
+  <version>0.1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>Pentaho Platform Reporting Plugin Assemblies</name>
+  <name>Tahopen Platform Reporting Plugin Assemblies</name>
   <modules>
     <module>web</module>
   </modules>
