--- a/core/pom.xml
+++ b/core/pom.xml
@@ -3,15 +3,15 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.pentaho.reporting.plugin</groupId>
+    <groupId>org.tahopen.reporting.plugin</groupId>
     <artifactId>reporting-platform-plugin</artifactId>
-    <version>10.1.0.0-SNAPSHOT</version>
+    <version>0.1.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>classic-core-platform-plugin</artifactId>
-  <version>10.1.0.0-SNAPSHOT</version>
-  <name>Pentaho Platform Reporting Plugin Core</name>
+  <version>0.1.0.0-SNAPSHOT</version>
+  <name>Tahopen Platform Reporting Plugin Core</name>
   <properties>
-    <js.project.list>common-ui,pentaho-cdf-js</js.project.list>
+    <js.project.list>common-ui,tahopen-cdf-js</js.project.list>
     <javascript.exclusion.pattern>**/*.jsdoc</javascript.exclusion.pattern>
     <javascript-test_karma-phase>integration-test</javascript-test_karma-phase>
     <build.dependenciesDirectory>${project.build.directory}/dependency</build.dependenciesDirectory>
@@ -26,61 +26,61 @@
       <artifactId>guava</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.pentaho.reporting.engine</groupId>
+      <groupId>org.tahopen.reporting.engine</groupId>
       <artifactId>classic-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.pentaho.reporting.engine</groupId>
+      <groupId>org.tahopen.reporting.engine</groupId>
       <artifactId>classic-extensions</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.pentaho.reporting.engine</groupId>
+      <groupId>org.tahopen.reporting.engine</groupId>
       <artifactId>classic-extensions-cda</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.pentaho.reporting.engine</groupId>
+      <groupId>org.tahopen.reporting.engine</groupId>
       <artifactId>classic-extensions-mondrian</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.pentaho.reporting.engine</groupId>
+      <groupId>org.tahopen.reporting.engine</groupId>
       <artifactId>classic-extensions-olap4j</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.pentaho.reporting.engine</groupId>
+      <groupId>org.tahopen.reporting.engine</groupId>
       <artifactId>classic-extensions-pmd</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.pentaho.reporting.engine</groupId>
+      <groupId>org.tahopen.reporting.engine</groupId>
       <artifactId>classic-extensions-kettle</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.pentaho.reporting.engine</groupId>
+      <groupId>org.tahopen.reporting.engine</groupId>
       <artifactId>classic-extensions-drill-down</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.pentaho.reporting.engine</groupId>
+      <groupId>org.tahopen.reporting.engine</groupId>
       <artifactId>legacy-charts</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.pentaho.reporting.library</groupId>
+      <groupId>org.tahopen.reporting.library</groupId>
       <artifactId>libformula</artifactId>
     </dependency>
     <dependency>
-      <groupId>pentaho</groupId>
-      <artifactId>pentaho-platform-api</artifactId>
+      <groupId>org.tahopen</groupId>
+      <artifactId>tahopen-platform-api</artifactId>
       <version>${platform.version}</version>
     </dependency>
     <dependency>
-      <groupId>pentaho</groupId>
-      <artifactId>pentaho-platform-core</artifactId>
+      <groupId>org.tahopen</groupId>
+      <artifactId>tahopen-platform-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>pentaho</groupId>
-      <artifactId>pentaho-platform-repository</artifactId>
+      <groupId>org.tahopen</groupId>
+      <artifactId>tahopen-platform-repository</artifactId>
     </dependency>
     <dependency>
-      <groupId>pentaho</groupId>
-      <artifactId>pentaho-platform-extensions</artifactId>
+      <groupId>org.tahopen</groupId>
+      <artifactId>tahopen-platform-extensions</artifactId>
     </dependency>
     <dependency>
       <groupId>commons-collections</groupId>
@@ -121,7 +121,7 @@
       <version>${gwt.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.pentaho</groupId>
+      <groupId>org.tahopen</groupId>
       <artifactId>commons-gwt-widgets</artifactId>
     </dependency>
     <dependency>
@@ -142,30 +142,30 @@
       <artifactId>GWT-FX</artifactId>
     </dependency>
     <dependency>
-      <groupId>pentaho</groupId>
+      <groupId>org.tahopen</groupId>
       <artifactId>common-ui</artifactId>
       <version>${common-ui.version}</version>
       <type>zip</type>
       <classifier>js</classifier>
     </dependency>
     <dependency>
-      <groupId>pentaho</groupId>
-      <artifactId>pentaho-cdf-js</artifactId>
+      <groupId>org.tahopen</groupId>
+      <artifactId>tahopen-cdf-js</artifactId>
       <type>zip</type>
     </dependency>
     <dependency>
-      <groupId>pentaho</groupId>
-      <artifactId>pentaho-js-build</artifactId>
+      <groupId>org.tahopen</groupId>
+      <artifactId>tahopen-js-build</artifactId>
       <type>zip</type>
     </dependency>
     <dependency>
-      <groupId>pentaho</groupId>
-      <artifactId>pentaho-service-coordinator</artifactId>
+      <groupId>org.tahopen</groupId>
+      <artifactId>tahopen-service-coordinator</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>pentaho</groupId>
-      <artifactId>pentaho-platform-core</artifactId>
+      <groupId>org.tahopen</groupId>
+      <artifactId>tahopen-platform-core</artifactId>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
@@ -180,13 +180,13 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.pentaho.reporting.engine</groupId>
+      <groupId>org.tahopen.reporting.engine</groupId>
       <artifactId>classic-core</artifactId>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>pentaho</groupId>
+      <groupId>org.tahopen</groupId>
       <artifactId>simple-jndi</artifactId>
       <scope>test</scope>
     </dependency>
