--- a/core/pom.xml
+++ b/core/pom.xml
@@ -39,7 +39,7 @@
     </dependency>
     <dependency>
       <groupId>org.tahopen.reporting.engine</groupId>
-      <artifactId>classic-extensions-mondrian</artifactId>
+      <artifactId>classic-extensions-drianmon</artifactId>
     </dependency>
     <dependency>
       <groupId>org.tahopen.reporting.engine</groupId>
@@ -142,7 +142,7 @@
       <artifactId>GWT-FX</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.tahopen</groupId>
+      <groupId>tahopen</groupId>
       <artifactId>common-ui</artifactId>
       <version>${common-ui.version}</version>
       <type>zip</type>
@@ -154,8 +154,8 @@
       <type>zip</type>
     </dependency>
     <dependency>
-      <groupId>org.tahopen</groupId>
-      <artifactId>tahopen-js-build</artifactId>
+      <groupId>pentaho</groupId>
+      <artifactId>pentaho-js-build</artifactId>
       <type>zip</type>
     </dependency>
     <dependency>
@@ -188,6 +188,7 @@
     <dependency>
       <groupId>org.tahopen</groupId>
       <artifactId>simple-jndi</artifactId>
+      <version>0.1.0.0-SNAPSHOT</version>    
       <scope>test</scope>
     </dependency>
     <dependency>
