--- a/assemblies/web/pom.xml
+++ b/assemblies/web/pom.xml
@@ -5,10 +5,10 @@
   <parent>
     <groupId>org.tahopen.reporting.plugin</groupId>
     <artifactId>reporting-platform-plugin-assemblies</artifactId>
-    <version>0.1.0.0-SNAPSHOT</version>
+    <version>0.1.0.0</version>
   </parent>
   <artifactId>classic-core-platform-plugin-package</artifactId>
-  <version>0.1.0.0-SNAPSHOT</version>
+  <version>0.1.0.0</version>
   <packaging>pom</packaging>
   <name>Tahopen Platform Reporting Plugin Web Package</name>
   <properties>
