--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,10 +5,10 @@
   <parent>
     <groupId>org.tahopen.reporting.plugin</groupId>
     <artifactId>reporting-platform-plugin</artifactId>
-    <version>0.1.0.0-SNAPSHOT</version>
+    <version>0.1.0.0</version>
   </parent>
   <artifactId>classic-core-platform-plugin</artifactId>
-  <version>0.1.0.0-SNAPSHOT</version>
+  <version>0.1.0.0</version>
   <name>Tahopen Platform Reporting Plugin Core</name>
   <properties>
     <js.project.list>common-ui,tahopen-cdf-js</js.project.list>
