--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   </licenses>
 
   <properties>
-    <pentaho-cdf-plugin.version>0.1.0.0-SNAPSHOT</pentaho-cdf-plugin.version>
+    <pentaho-cdf-plugin.version>0.1.0.0</pentaho-cdf-plugin.version>
     <dependency.osgi-bundles.revision>${project.version}</dependency.osgi-bundles.revision>
     <junit.version>4.12</junit.version>
     <frontend-maven-plugin.version>0.0.29</frontend-maven-plugin.version>
